feat/refactor: implement shoppingCart module and the functionality of add to cart some product, improve also the consumers in different modules, and the rabbit configuration too

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -36,36 +36,34 @@ spring:
           initial-interval: 3000
           multiplier: 2
           max-interval: 12000
+    exchanges:
+      user-created: user.created.exchange
+      user-created-dlq: user.created.dlq.exchange
+      user-code-created: user.code.created.exchange
+      user-code-created-dlq: user.code.created.dlq.exchange
+      product-registered: product.registered.exchange
+      product-registered-dlq: product.registered.dlq.exchange
+      product-updated: product.updated.exchange
+      product-updated-dlq: product.updated.dlq.exchange
     queues:
-      user-created:
-        queue: user.created.queue
-        exchange: user.created.exchange
-        routing-key: user.created.routing.key
-        dlq:
-          queue: user.created.dlq.queue
-          exchange: user.created.dlq.exchange
-          routing-key: user.created.dlq.routing.key
-      user-code-created:
-        queue: user.code.created.queue
-        exchange: user.code.created.exchange
-        routing-key: user.code.created.routing.key
-        dlq:
-          queue: user.code.created.dlq.queue
-          exchange: user.code.created.dlq.exchange
-          routing-key: user.code.created.dlq.routing.key
-      product-registered:
-        queue: product.registered.queue
-        exchange: product.registered.exchange
-        routing-key: product.registered.routing.key
-        dlq:
-          queue: product.registered.dlq.queue
-          exchange: product.registered.dlq.exchange
-          routing-key: product.registered.dlq.routing.key
-      product-sku-updated:
-        queue: product.sku.updated.queue
-        exchange: product.sku.updated.exchange
-        routing-key: product.sku.updated.routing.key
-        dlq:
-          queue: product.sku.updated.dlq.queue
-          exchange: product.sku.updated.dlq.exchange
-          routing-key: product.sku.updated.dlq.routing.key
+      user-created: user.created.queue
+      user-created-dlq: user.created.dlq.queue
+      user-code-created: user.code.created.queue
+      user-code-created-dlq: user.code.created.dlq.queue
+      product-registered: product.registered.queue
+      product-registered-dlq: product.registered.dlq.queue
+      product-sku-updated: product.sku.updated.queue
+      product-sku-updated-dlq: product.sku.updated.dlq.queue
+      product-price-updated: product.price.updated.queue
+      product-price-updated-dlq: product.price.updated.dlq.queue
+    routing-keys:
+      user-created: user.created.routing.key
+      user-created-dlq: user.created.dlq.routing.key
+      user-code-created: user.code.created.routing.key
+      user-code-created-dlq: user.code.created.dlq.routing.key
+      product-registered: product.registered.routing.key
+      product-registered-dlq: product.registered.dlq.routing.key
+      product-sku-updated: product.sku.updated.routing.key
+      product-sku-updated-dlq: product.sku.updated.dlq.routing.key
+      product-price-updated: product.price.updated.routing.key
+      product-price-updated-dlq: product.price.updated.dlq.routing.key
