--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -36,3 +36,9 @@ spring:
           initial-interval: 3000
           multiplier: 2
           max-interval: 12000
+
+  api-freight-quote:
+    fromCep: ${FREIGHT_QUOTE_FROM}
+    url: ${FREIGHT_QUOTE_URL}
+    token: ${FREIGHT_QUOTE_TOKEN}
+    email: ${FREIGHT_QUOTE_EMAIL}
