--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,17 @@ services:
     networks:
       - nexbuy-network
 
+  stripe-compose:
+    image: stripe/stripe-cli:latest
+    container_name: stripe-container
+    command: listen --forward-to host.docker.internal:8080/api/v1/payments/webhook
+    environment:
+      - STRIPE_API_KEY=your_sk_test
+    ports:
+      - "12111:12111"
+    networks:
+      - nexbuy-network
+
 networks:
   nexbuy-network:
     driver: bridge
