--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -37,8 +37,18 @@ spring:
           multiplier: 2
           max-interval: 12000
 
-  freight-api:
-    fromCep: ${FREIGHT_QUOTE_FROM}
-    url: ${FREIGHT_QUOTE_URL}
-    token: ${FREIGHT_QUOTE_TOKEN}
-    email: ${FREIGHT_QUOTE_EMAIL}
+  freight:
+    api:
+      url: ${FREIGHT_QUOTE_URL}
+      token: ${FREIGHT_QUOTE_TOKEN}
+      email: ${FREIGHT_QUOTE_EMAIL}
+      cep:
+        from: ${FREIGHT_QUOTE_FROM}
+
+  stripe:
+    api:
+      secret:
+        key: ${STRIPE_API_SECRET_KEY}
+      webhook:
+        secret:
+          key: ${STRIPE_WEBHOOK_SECRET_KEY}
