--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
   api:
     security:
       token:
-        secret: ${JWT_SECRET:jwt_secret_key}
+        secret: ${JWT_SECRET}
 
   mail:
     host: smtp.gmail.com
