feat: implement migrations with flyway

--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,17 @@
             <artifactId>stripe-java</artifactId>
             <version>29.5.0</version>
         </dependency>
+		<dependency>
+			<groupId>org.flywaydb</groupId>
+			<artifactId>flyway-core</artifactId>
+			<version>11.19.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.flywaydb</groupId>
+			<artifactId>flyway-database-postgresql</artifactId>
+			<version>11.19.0</version>
+			<scope>runtime</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
